Add and Link cocoa touch files as well as outlets

--- a/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
@@ -12,13 +12,13 @@
         <!--Journal-->
         <scene sceneID="FUb-Li-oIu">
             <objects>
-                <tableViewController id="1Zw-Od-HW5" sceneMemberID="viewController">
+                <tableViewController id="1Zw-Od-HW5" customClass="EntriesTableViewController" customModule="Journal_CoreData" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="yLu-Uv-MXw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="73" id="TEC-Me-772">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="73" id="TEC-Me-772" customClass="EntryTableViewCell" customModule="Journal_CoreData" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="73"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TEC-Me-772" id="zWd-gV-imN">
@@ -62,6 +62,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyLabel" destination="bFg-qd-0O7" id="6qu-wS-aoQ"/>
+                                    <outlet property="timestampLabel" destination="xfK-VW-ZSJ" id="xF1-xg-Qdb"/>
+                                    <outlet property="titleLabel" destination="nNt-rw-hqv" id="P1o-R5-EOb"/>
                                     <segue destination="rRD-TY-LAV" kind="show" identifier="ViewEntry" id="q6r-6E-4N1"/>
                                 </connections>
                             </tableViewCell>
@@ -83,20 +86,58 @@
             </objects>
             <point key="canvasLocation" x="796" y="100.29985007496252"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="lPC-BB-qwj">
             <objects>
-                <viewController id="rRD-TY-LAV" sceneMemberID="viewController">
+                <viewController id="rRD-TY-LAV" customClass="EntryDetailViewController" customModule="Journal_CoreData" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fzO-zd-CrP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qSZ-2V-N5c">
+                                <rect key="frame" x="16" y="135" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="titleTextField:" destination="rRD-TY-LAV" eventType="editingDidEnd" id="aig-Ha-dcg"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WT7-Zm-Rvr">
+                                <rect key="frame" x="16" y="182" width="343" height="218"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qSZ-2V-N5c" firstAttribute="top" secondItem="fVH-Du-cGV" secondAttribute="top" constant="19" id="Jab-Ty-b0J"/>
+                            <constraint firstItem="fVH-Du-cGV" firstAttribute="bottom" secondItem="WT7-Zm-Rvr" secondAttribute="bottom" constant="267" id="LCD-Ve-QZQ"/>
+                            <constraint firstItem="fVH-Du-cGV" firstAttribute="trailing" secondItem="WT7-Zm-Rvr" secondAttribute="trailing" constant="16" id="RTc-Df-7mC"/>
+                            <constraint firstItem="qSZ-2V-N5c" firstAttribute="leading" secondItem="fVH-Du-cGV" secondAttribute="leading" constant="16" id="SMa-ZF-Dgq"/>
+                            <constraint firstItem="WT7-Zm-Rvr" firstAttribute="leading" secondItem="fVH-Du-cGV" secondAttribute="leading" constant="16" id="UJZ-oD-TfC"/>
+                            <constraint firstItem="fVH-Du-cGV" firstAttribute="trailing" secondItem="qSZ-2V-N5c" secondAttribute="trailing" constant="16" id="spQ-cX-sZN"/>
+                            <constraint firstItem="WT7-Zm-Rvr" firstAttribute="top" secondItem="qSZ-2V-N5c" secondAttribute="bottom" constant="17" id="wFi-yu-yL5"/>
+                            <constraint firstItem="WT7-Zm-Rvr" firstAttribute="top" secondItem="qSZ-2V-N5c" secondAttribute="bottom" constant="17" id="x1k-pA-SNg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fVH-Du-cGV"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="BNH-4c-KAD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="GFA-e3-ksb">
+                            <connections>
+                                <action selector="saveEntry:" destination="rRD-TY-LAV" id="UAU-G3-Vek"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextView" destination="WT7-Zm-Rvr" id="uxY-ai-Ukv"/>
+                        <outlet property="titleTextField" destination="qSZ-2V-N5c" id="5hX-eS-qoo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Beg-uc-4cZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1777" y="100"/>
+            <point key="canvasLocation" x="1776.8" y="99.400299850074973"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6WZ-dZ-ZEE">
