--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -13,13 +13,13 @@
         <!--Journal-->
         <scene sceneID="bSF-48-xTU">
             <objects>
-                <tableViewController id="Zqt-8h-Ogu" sceneMemberID="viewController">
+                <tableViewController id="Zqt-8h-Ogu" customClass="JournalTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AJn-J3-uCT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="100" id="shs-24-E6z">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="100" id="shs-24-E6z" customClass="JournalTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="shs-24-E6z" id="0Bz-BA-yjr">
@@ -50,6 +50,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="subtitleLabel" destination="1En-xc-gTR" id="tRg-82-zMq"/>
+                                    <outlet property="timeLabel" destination="XuO-7e-t27" id="0KF-6J-H24"/>
+                                    <outlet property="titleLabel" destination="wvC-vE-I2D" id="W7W-cQ-sgq"/>
                                     <segue destination="0pm-4N-BuX" kind="show" identifier="ViewEntry" id="xJv-pm-fRk"/>
                                 </connections>
                             </tableViewCell>
@@ -74,7 +77,7 @@
         <!--Title-->
         <scene sceneID="ZeM-Xo-Rp3">
             <objects>
-                <viewController id="0pm-4N-BuX" sceneMemberID="viewController">
+                <viewController id="0pm-4N-BuX" customClass="JournalDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iKi-cB-Kjg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
